Add button and signin with google

--- a/index.html
+++ b/index.html
@@ -12,5 +12,19 @@
     </style>
   </head>
   <body>
+    <script src="https://accounts.google.com/gsi/client" async></script>
+    <div id="g_id_onload"
+        data-client_id="985232251688-vc1a8327ale5ic0h3fhp47641apul70c.apps.googleusercontent.com"
+        data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+    <div id="userName"></div>
   </body>
 </html>
