--- a/index.html
+++ b/index.html
@@ -2,15 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
       body {
-        padding: 200px;
+        padding: 0;
+        margin: 0;
       }
-       canvas {
+      #game-container {
         border: 2px solid black;
-       }
+        width: 1100px;
+        height: 800px;
+        margin: auto;
+      }
     </style>
   </head>
   <body>
+    <!-- Bootstrap Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Bomberman</a>
+    </nav>
+
+    <!-- Session Hash-->
+    <div id="session-display"></div>
+
+
+    <!-- Game Div -->
+    <div id="game-container"></div>
+
+    <!-- Phaser and Your Game Script -->
+    <script src="path/to/phaser.js"></script>
+    <script src="path/to/your/game/script.js"></script>
   </body>
 </html>
+
