propose for start session

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <!-- Session Hash-->
     <div id="session-display"></div>
 
+    <!-- Play button -->
+    <div id="buttonContainer">
+        <button id="PlayButton" style="display: none;">Click Me</button>
+    </div>
 
     <!-- Game Div -->
     <div id="game-container"></div>
