Fix repeated names and disable join game in game stated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Play button -->
     <div id="buttonContainer">
-        <button id="PlayButton" style="display: none;">Click Me</button>
+        <button id="PlayButton" style="display: none;">START GAME</button>
     </div>
 
     <!-- Game Div -->
